--- a/src/style.styl
+++ b/src/style.styl
@@ -60,6 +60,7 @@ body {
     margin: 0;
     line-height: 32px;
     font-weight: 500;
+    color: #fff;
 }
 
 .mdc-card__content {
@@ -106,6 +107,16 @@ width: 100%;
 .mdc-drawer {
     background-color: #f4f4f4;
     border: 0;
+    padding-left: 10px;
+}
+
+.mdc-drawer .cuca {
+    max-width: 35%;
+    padding: 15px 0 10px;
+}
+
+.mdc-drawer h3 {
+    margin-top: 0;
 }
 
 .mdc-drawer .mdc-list-item {
@@ -234,7 +245,7 @@ width: 100%;
 .absences-list__item-container {
     width: 100%;
     align-items: center;
-    padding: 25px 30px;    
+    padding: 25px 5px 25px 30px;        
     display: flex;
 }    
 
@@ -311,4 +322,194 @@ width: 100%;
     white-space: nowrap;
     font-size: 16px;
     line-height: 25px;    
+}
+
+th {
+    padding: 12px 6px;
+}
+
+td {
+    padding: 0 3px;
+}
+
+tr {
+    padding: 6px;
+}
+
+.tbl-absences {
+    border: 1px solid #dfe3e6;
+    border-radius: 5px;
+    border-spacing: 0;
+    width: 100%;
+}
+
+.tbl-absences tr:first-child th {
+    font-weight: 500;
+    background-color: #aec122;
+    color: #fff;    
+}
+
+.tbl-absences tr.worker-item > td {
+    border-bottom: 1px solid #dfe3e6;
+    border-right: 1px solid #dfe3e6;
+}
+
+.tbl-absences tr.worker-item:last-child > td {
+    border-bottom: 0;
+}    
+
+.tbl-absences tr.worker-item > td:last-child {
+    border-right: 0;
+}    
+
+
+/* Tipus absències */
+
+.tbl-absences td.absence-type {
+    padding: 3px 8px;
+}
+
+.tbl-absences td.absence-type-2 {
+    color: #687600;
+    background-color: #687600;
+}
+
+.tbl-absences td.absence-type-3 {
+    color: #FF5600;
+    background-color: #FF5600;
+}
+
+.tbl-absences td.absence-type-9 {
+    color: rgba(0, 0, 0, 0.14);
+    background-color: rgba(0, 0, 0, 0.14);
+}
+
+td.worker {
+    color: #1c242b;
+    font-weight: 500;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 18px;    
+    height: 36px;
+    padding: 6px 12px;    
+}
+
+.tbl-worker-item {
+    border-spacing: 0;
+    border-radius: 4px;
+    overflow: hidden;
+    width: 100%;    
+}
+
+.worker-item:hover {
+    background-color: #aec1221a;
+}
+
+.tbl-worker-item > td {
+    padding: 0;
+}
+
+/* LOGIN */
+
+.login h1 {
+    font-weight: 500;
+}
+
+.login-cuca {
+    max-width: 250px;
+    padding: 50px 0 20px;
+}
+
+/* ABSENCES */
+
+.total-absences {
+    display: flex;
+    flex: 1 1 auto;
+    justify-content: center;    
+    padding: 25px 0;
+    text-align: center;
+    list-style: none;
+    border: 1px solid #dfe3e6;
+    border-radius: 5px;
+    overflow: hidden;    
+}
+
+li.total-absences__item {
+    width: 33%;
+    padding: 0 10px;
+    border-right: 1px solid #dfe3e6;   
+}
+
+li.total-absences__item:last-child {
+    border-right: 0;   
+}
+
+
+.total-absences__item .num {
+    color: #1c242b;
+    font-size: 30px;
+    letter-spacing: 1px;
+    line-height: 40px;
+}
+
+.total-absences__item .desc {
+    color: #6f7a80;
+    font-size: 12px;
+    letter-spacing: 1px;
+    text-transform: uppercase;    
+}   
+
+ul.mini-calendar {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    margin-top: 25px;
+    padding-right: 15px;
+}
+
+ul.mini-calendar li {
+    width: 126px;
+    margin-bottom: 30px;
+    list-style: none;    
+}
+
+.month-title {
+    margin: 0;
+    margin-bottom: 10px;
+    font-size: 16px;
+    color: #6f7a80;    
+    padding: 0;
+}
+
+.month-grid {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    margin-bottom: 30px;    
+    padding: 0;
+}
+
+.month-day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 14.28571%;
+    font-size: 10px;
+    font-weight: 600;
+    width: 12px;
+    height: 12px;
+    line-height: 13px;
+    padding: 0 3px;
+    margin: 3px 0;
+    color: #6f7a80;
+    text-align: center;
+    cursor: default;    
+}
+
+.month-day__selected {
+    background-color: var(--mdc-theme-primary);
+    color: #fff;
 }
